--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,7 +1,7 @@
 <nav>
     <ul>
     <% if user_signed_in? %>
-    <h3> Welcome,<%= current_user.email %></h3>
+    <h3> You are signed with,  <%= current_user.email %></h3>
     <li><%= link_to "Home", sellables_path %></li>
     <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
     <li><%= link_to "Account Settings", edit_user_registration_path %>
